18306
Create file:
```scala
// core/package.scala
package test

package object core {

  sealed trait Result[T]
  case class Success[T](data: T) extends Result[T]
  case class Failure[T](errorText: String) extends Result[T]

  def f(): Result[Int] = {
    Success[Int](2): Result[Int]
  }
}
```

Now compile it:
```
  $ ~/dev/scala-2.10.1/bin/scalac core/package.scala
```

all is OK. Compile it again:
```
  $ ~/dev/scala-2.10.1/bin/scalac core/package.scala
  core/package.scala:10: error: type mismatch;
   found   : test.core.Success[Int]
   required: test.core.package.Result[Int]
      Success[Int](2): Result[Int]
                ^
  one error found
```
